# beast

./: .flake8  .gitignore  DPosnova.txt  README.md  board.py  build.bat  changelog.txt  expand.py  heuristic.py  main.py  pyproject.toml  requirements.txt  search.py  testing.py  timemanagement.py  uci_specification.txt  venv.cmd
.github/workflows/: build.yml  ci.yml  flake8.yml
beast/: board.py  heuristic.py  main.py  search.py
beast-legacy/: build.cmd  heuristic.py  main.py  venv.cmd
beast-legacy/nn_backend/: main.py
beast-legacy/src/: main.py
beast-python/: build.cmd  build_exe.cmd  make_venv.cmd  venv.cmd
beast-python/src/: make.cmd
beast-python_chess/: build_exe.cmd  make_venv.cmd
beast-python_chess/src/: main.py  search.py
beast-rust/: Cargo.toml
beast-rust/src/: main.rs
beast/src/: beast.py
beast_cpp/: beast.cpp
emulator/: emulator.sln
emulator/Release/: emulator.iobj  emulator.ipdb
emulator/Release/src/: engine.py  uci.py
emulator/emulator/: emulator.cpp  emulator.vcxproj  emulator.vcxproj.filters  stdafx.cpp
emulator/emulator/Debug/: emulator.pch  vc141.idb
emulator/emulator/Debug/emulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  emulator.lastbuildstate
emulator/emulator/Release/: emulator.pch
emulator/emulator/Release/emulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  emulator.lastbuildstate  emulator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
emulator/emulator/x64/Debug/: emulator.pch  vc141.idb
emulator/emulator/x64/Debug/emulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  emulator.lastbuildstate
emulator/emulator/x64/Release/: emulator.pch
emulator/emulator/x64/Release/emulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  emulator.lastbuildstate  emulator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
emulator/x64/Release/: emulator.iobj  emulator.ipdb
emulator_cpp/: beast.cpp
exe_runner/c#/: BeastExe.csproj  BeastExe.sln  Program.cs
exe_runner/c#/Properties/: AssemblyInfo.cs
exe_runner/c++/: CMakeLists.txt  main.cpp
exe_runner/rust/: Cargo.toml
exe_runner/rust/src/: main.rs
install/: install.ps1  req_core.txt  req_dev.txt  req_pytorch.txt
learning_data/: pgn_convert.py
models/: readme.txt
nn_backend/: beast_neural_network.py  pgn_convert.py  pgn_convert_v2.py  train_network.py  train_network_v2.py
notebooks/: parse_pgn.ipynb  train_net.ipynb
notebooks/infra/: __init__.py  beast_neural_network.py  constants.py  onnx.py  pgn_converter.py  randomization_seed.py  train_network.py
src/: beast.py  beast2.py  board.py  classical_heuristic.py  constants.py  engine.py  engine_command.py  expand.py  go_parameters.py  heuristic.py  main.py  nn_heuristic.py  node.py  options.py  search.py  search_options.py  timemanagement.py  uci_protocol.py
src/beast/: beast.py  constants.py  engine.py  engine_command.py  main.py  search_options.py  uci_protocol.py
src/beast/engine/: __init__.py  engine.py  uci_protocol.py
src/beast/heuristic/: classical_heuristic.py  heuristic_type.py  legacy_neural_network.py  neural_network.py  random_heuristic.py
src/beast/heuristics/: classical_heuristic.py  legacy_neural_network.py  neural_network.py  random_heuristic.py
src/beast/heuristics/infra/: heuristic_type.py  piece_values.py
src/beast/infra/: __init__.py  constants.py  search_options.py
src/beast/neural_networks/: __init__.py  net.py  net_factory.py  net_v1.py  net_v2.py  net_version.py
src/beast_chess/: __init__.py  _version.py  main.py
src/beast_chess/board/: __init__.py  attacks.py  constants.py  move.py  position.py  zobrist.py
src/beast_chess/engine/: engine.py  uci_protocol.py
src/beast_chess/heuristics/: __init__.py  classical_heuristic.py  neural_network.py  random_heuristic.py
src/beast_chess/heuristics/infra/: __init__.py  heuristic.py  heuristic_type.py  piece_values.py
src/beast_chess/infra/: constants.py  engine_command.py  search_options.py
src/beast_chess/neural_networks/: __init__.py  net_input_factory.py  net_input_v1.py  net_input_v2.py  net_input_version.py
src/heuristic/: __init__.py  classical_heuristic.py  heuristic.py  heuristic_type.py  legacy_neural_network.py  neural_network.py  piece_values.py  random_heuristic.py
tests/: test_board.py  test_board_performance.py  test_engine_board_integration.py  test_engine_search.py
