[project]
name = "beast-chess"
version = "3.2.3"
authors = [{name = "Miloslav Macůrek"}]
description = "Beast - UCI Chess Engine"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
readme = "README.md"

dependencies = [
    "chess~=1.11",
    "numpy~=2.1.3",
    "onnxruntime~=1.21.0; platform_system != 'Windows' or platform_machine not in 'aarch64 arm64 ARM64 AARCH64'",
    "onnxruntime-qnn~=1.21.0; platform_system == 'Windows' and platform_machine in 'aarch64 arm64 ARM64 AARCH64'",
]

[project.optional-dependencies]
build = [
    "pyinstaller~=6.14.0",
]

dev = [
    "matplotlib~=3.10.3",
    "notebook~=7.4.3",
    "onnx~=1.17.0",
    "ruff~=0.11.13",
    "tensorflow~=2.19.0",
    "tf2onnx~=1.16.1",
]

cuda = [
    "tensorflow[and-cuda]~=2.19.0",
]

[project.scripts]
beast = "beast_chess.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    "__pycache__",
    ".app",
    ".dev",
    ".git",
    ".idea",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "ANN401",
    "B017",
    "B901",
    "COM812",
    "CPY",
    "D",
    "DOC",
    "ERA001",
    "FIX002",
    "G004",
    "NPY002",
    "PTH123",
    "PLR2004",
    "S311",
    "T201",
    "TD",
    "TID252",
    "UP038",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 6
