[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beast-chess"
dynamic = ["version"]
authors = [{name = "Miloslav Macurek"}]
description = "Beast - UCI Chess Engine"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
keywords = ["chess", "uci", "engine", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "chess~=1.11",
    "numpy~=2.1.3",
    "onnxruntime~=1.21.0; platform_system != 'Windows' or platform_machine not in 'aarch64 arm64 ARM64 AARCH64'",
    "onnxruntime-qnn~=1.21.0; platform_system == 'Windows' and platform_machine in 'aarch64 arm64 ARM64 AARCH64'",
]

[project.optional-dependencies]
build = [
    "pyinstaller~=6.14.0",
]

dev = [
    "matplotlib~=3.10.3",
    "notebook~=7.4.3",
    "onnx~=1.17.0",
    "ruff~=0.11.13",
    "tensorflow~=2.19.0",
    "tf2onnx~=1.16.1",
]

cuda = [
    "tensorflow[and-cuda]~=2.19.0",
]

[project.scripts]
beast = "beast_chess.main:main"

[project.urls]
Homepage = "https://github.com/maelic13/beast"
Issues = "https://github.com/maelic13/beast/issues"
Repository = "https://github.com/maelic13/beast"
Releases = "https://github.com/maelic13/beast/releases"
Changelog = "https://github.com/maelic13/beast/blob/main/changelog.txt"

[tool.setuptools.dynamic]
version = {attr = "beast_chess.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    "__pycache__",
    ".app",
    ".dev",
    ".git",
    ".idea",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "ANN401",
    "B017",
    "B901",
    "COM812",
    "CPY",
    "D",
    "DOC",
    "ERA001",
    "FIX002",
    "G004",
    "NPY002",
    "PTH123",
    "PLR2004",
    "S311",
    "T201",
    "TD",
    "TID252",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 6
