[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "beast-chess"
version = "3.3.3"
authors = [{name = "Miloslav Macurek"}]
description = "Beast - UCI Chess Engine"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"

dependencies = [
    "chess~=1.11.2",
    "numpy~=2.4.4",
    "onnxruntime~=1.25.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller~=6.20.0",
]

dev = [
    "ruff~=0.15.12",
]

[project.scripts]
beast = "beast_chess.main:main"

[tool.ruff]
line-length = 100

exclude = [
    "__pycache__",
    ".app",
    ".dev",
    ".git",
    ".idea",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "ANN401",
    "B017",
    "B901",
    "COM812",
    "CPY",
    "D",
    "DOC",
    "ERA001",
    "FIX002",
    "G004",
    "NPY002",
    "PTH123",
    "PLR2004",
    "S311",
    "T201",
    "TD",
    "TID252",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 6
